--- a/sdd-320/main.tex
+++ b/sdd-320/main.tex
@@ -138,7 +138,7 @@ Version 1.0
 \par}
 
 {\centering\selectlanguage{english}\bfseries\color{black}
-November 8, 2015
+November 13, 2015
 \par}
 
 
@@ -207,8 +207,8 @@ Section\ \hfill  Page}
 \section[INTRODUCTION]{\selectlanguage{english}\rmfamily\bfseries\color{black}
 INTRODUCTION}
 
-\subsection[Goals and Objectives]{\selectlanguage{english}\rmfamily\bfseries\color{black}
-GOALS AND OBJECTIVES}
+\subsection[GOALS \& OBJECTIVES]{\selectlanguage{english}\rmfamily\bfseries\color{black}
+GOALS \& OBJECTIVES}
 {\selectlanguage{english}\rmfamily\color{black}
 Introduction to design document.
 }
@@ -216,104 +216,97 @@ Introduction to design document.
 \subsubsection[Browsing and Search]{\selectlanguage{english}\rmfamily\bfseries\color{black}
 Browsing and Search}
 {\selectlanguage{english}\rmfamily\color{black}
-Introduction to design document.
+
 }
 \subsubsection[Form Entry]{\selectlanguage{english}\rmfamily\bfseries\color{black}
-Browsing and Search}
+Form Entry}
 {\selectlanguage{english}\rmfamily\color{black}
-Introduction to design document.
+
 }
 \subsubsection[Delayed Upload]{\selectlanguage{english}\rmfamily\bfseries\color{black}
-Browsing and Search}
+Delayed Upload}
 {\selectlanguage{english}\rmfamily\color{black}
-Introduction to design document.
+
 }
 
-\subsection[Project Overview and Scope]{\selectlanguage{english}\rmfamily\bfseries\color{black}
-Project Overview and Scope}
+\subsection[PROJECT OVERVIEW \& SCOPE]{\selectlanguage{english}\rmfamily\bfseries\color{black}
+PROJECT OVERVIEW \& SCOPE}
 {\selectlanguage{english}\rmfamily\color{black}
 WRITE HERE}
 
-\subsubsection{Core features}
+\subsubsection{Core Features}
+{\selectlanguage{english}\rmfamily\color{black}
+WRITE HERE}
 
-\subsubsection{Addtional features}
+\subsubsection{Additional Features}
+{\selectlanguage{english}\rmfamily\color{black}
+WRITE HERE}
 
-% \subsection[REFERENCESS]{\selectlanguage{english}\rmfamily\bfseries\color{black}
+% \subsection[REFERENCES]{\selectlanguage{english}\rmfamily\bfseries\color{black}
 % REFERENCES}
 % {\selectlanguage{english}\itshape\color{black}
 % WRITE HERE}
 
-\subsection[Software Context]{\selectlanguage{english}\rmfamily\bfseries\color{black}
-Software Context}
+\subsection[SOFTWARE CONTEXT]{\selectlanguage{english}\rmfamily\bfseries\color{black}
+SOFTWARE CONTEXT}
 {\selectlanguage{english}\rmfamily\color{black}
 WRITE HERE}
 
-\subsection[Major Constraints]{\selectlanguage{english}\rmfamily\bfseries\color{black}
-Major Constraints}
+\subsection[MAJOR CONSTRAINTS]{\selectlanguage{english}\rmfamily\bfseries\color{black}
+MAJOR CONSTRAINTS}
 {\selectlanguage{english}\rmfamily\color{black}
 WRITE HERE}
 
-\subsection[Intended Audience and Reading Suggestions]{\selectlanguage{english}\rmfamily\bfseries\color{black}
-Intended Audience and Reading Suggestions}
+\subsection[INTENDED AUDIENCE]{\selectlanguage{english}\rmfamily\bfseries\color{black}
+INTENDED AUDIENCE}
 {\selectlanguage{english}\rmfamily\color{black}
 WRITE HERE}
 
 
 \clearpage\section[DATA DESIGN]{\selectlanguage{english}\rmfamily\bfseries\color{black}
 DATA DESIGN}
-\subsection[Internal Software Data Structure]{\selectlanguage{english}\rmfamily\bfseries\color{black}
-Internal Software Data Structure}
+\subsection[INTERNAL SOFTWARE DATA STRUCTURE]{\selectlanguage{english}\rmfamily\bfseries\color{black}
+INTERNAL SOFTWARE DATA STRUCTURE}
 {\selectlanguage{english}\rmfamily\color{black}
 WRITE HERE}
-\subsection[Global Data Structure]{\selectlanguage{english}\rmfamily\bfseries\color{black}
-Global Data Structure}
+
+\subsection[GLOBAL DATA STRUCTURE]{\selectlanguage{english}\rmfamily\bfseries\color{black}
+GLOBAL DATA STRUCTURE}
 {\selectlanguage{english}\rmfamily\color{black}
 WRITE HERE}
-\subsection[Temporary Data Structure]{\selectlanguage{english}\rmfamily\bfseries\color{black}
-Temporary Data Structure}
+
+\subsection[TEMPORARY DATA STRUCTURE]{\selectlanguage{english}\rmfamily\bfseries\color{black}
+TEMPORARY DATA STRUCTURE}
 {\selectlanguage{english}\rmfamily\color{black}
 WRITE HERE}
-\subsection[Database Description]{\selectlanguage{english}\rmfamily\bfseries\color{black}
-Database Description}
+
+\subsection[DATABASE DESCRIPTION]{\selectlanguage{english}\rmfamily\bfseries\color{black}
+DATABASE DESCRIPTION}
 {\selectlanguage{english}\rmfamily\color{black}
 WRITE HERE}
+
 
 \clearpage\section[ARCHITECTURAL AND COMPONENT-LEVEL DESIGN]{\selectlanguage{english}\rmfamily\bfseries\color{black}
 ARCHITECTURAL AND COMPONENT-LEVEL DESIGN}
-\subsection[System Structure]{\selectlanguage{english}\rmfamily\bfseries\color{black}
-System Structure}
+\subsection[SYSTEM STRUCTURE]{\selectlanguage{english}\rmfamily\bfseries\color{black}
+SYSTEM STRUCTURE}
+Insert public class diagrams, UML. Talk about the relationship of these to each sub-project.
 
-\subsubsection[Browsing and Search]{\selectlanguage{english}\rmfamily\bfseries\color{black}
-Browsing and Search}
-{\selectlanguage{english}\rmfamily\color{black}
-Introduction to design document.
-}
-\subsubsection[Form Entry]{\selectlanguage{english}\rmfamily\bfseries\color{black}
-Browsing and Search}
-{\selectlanguage{english}\rmfamily\color{black}
-Introduction to design document.
-}
-\subsubsection[Delayed Upload]{\selectlanguage{english}\rmfamily\bfseries\color{black}
-Browsing and Search}
-{\selectlanguage{english}\rmfamily\color{black}
-Introduction to design document.
-}
-
+\subsection[SYSTEM IMPLEMENTATION]{\selectlanguage{english}\rmfamily\bfseries\color{black}
+SYSTEM IMPLEMENTATION}
 {\selectlanguage{english}\rmfamily\color{black}
 Write Here
 }
-\subsection[BEGIN DEFINING SUB CLASSES...]{\selectlanguage{english}\rmfamily\bfseries\color{black}
-BEGIN DEFINING SUB CLASSES...}
-{\selectlanguage{english}\rmfamily\color{black}
-Write Here
-}
+\subsubsection{Class Definitions}
+
+\subsubsection{Function Descriptions}
 
 
 \clearpage\section[USER INTERFACE DESIGN]{\selectlanguage{english}\rmfamily\bfseries\color{black}
 [USER INTERFACE DESIGN}
 
-\subsection[Description of the User Interface]{\selectlanguage{english}\rmfamily\bfseries\color{black}
-Description of the User Interface}
+\subsection[DESCRIPTION OF THE USER INTERFACE]{\selectlanguage{english}\rmfamily\bfseries\color{black}
+DESCRIPTION OF THE USER INTERFACE}
 {\selectlanguage{english}\rmfamily\color{black}
 Describe the functionality of the system from the users perspective. Explain how the user
 will be able to use your system to complete all the expected features and the feedback
@@ -325,87 +318,68 @@ Browsing and Search}
 {\selectlanguage{english}\rmfamily\color{black}
 Introduction to design document.
 }
+
 \subsubsection[Form Entry]{\selectlanguage{english}\rmfamily\bfseries\color{black}
 Browsing and Search}
 {\selectlanguage{english}\rmfamily\color{black}
 Introduction to design document.
 }
+
 \subsubsection[Delayed Upload]{\selectlanguage{english}\rmfamily\bfseries\color{black}
 Browsing and Search}
 {\selectlanguage{english}\rmfamily\color{black}
 Introduction to design document.
 }
 
-\subsection[For first time users]{\selectlanguage{english}\rmfamily\bfseries\color{black}
-For first time users}
+\subsection[FOR FIRST TIME USERS]{\selectlanguage{english}\rmfamily\bfseries\color{black}
+FOR FIRST TIME USERS}
 {\selectlanguage{english}\rmfamily\color{black}
 Describethefunctionality of thesystem from the users perspective. Explain howtheuser
 will be able to use your system to complete all the expected features and the feedback
 information that will bedisplayedfor theuser.
 }
-\subsection[For returning users]{\selectlanguage{english}\rmfamily\bfseries\color{black}
-For first time users}
+
+\subsection[FOR RETURNING USERS]{\selectlanguage{english}\rmfamily\bfseries\color{black}
+FOR RETURNING USERS}
 {\selectlanguage{english}\rmfamily\color{black}
 Describethefunctionality of thesystem from the users perspective. Explain howtheuser
 will be able to use your system to complete all the expected features and the feedback
 information that will bedisplayedfor theuser.
 }
-\subsection[Screen Images]{\selectlanguage{english}\rmfamily\bfseries\color{black}
-Screen Images}
+
+\subsection[SCREEN IMAGES]{\selectlanguage{english}\rmfamily\bfseries\color{black}
+SCREEN IMAGES}
 {\selectlanguage{english}\rmfamily\color{black}
 Display screenshots showingtheinterfacefrom theusers perspective. Thesecan be handdrawn
 or youcan use an automateddrawing tool. Just make them as accurateas possible.
 (Graph paper workswell.)
 }
-\subsection[Screen Objects and Actions]{\selectlanguage{english}\rmfamily\bfseries\color{black}
-Screen Objects and Actions}
+
+\subsection[SCREEN OBJECTS \& ACTIONS]{\selectlanguage{english}\rmfamily\bfseries\color{black}
+SCREEN OBJECTS \& ACTIONS}
 {\selectlanguage{english}\rmfamily\color{black}
 A discussion of screen objects andactions associatedwith thoseobjects.
 }
 
-\clearpage\section[RESTRICTIONS, LIMITATIONS, \& CONSTRAINTS]{\selectlanguage{english}\rmfamily\bfseries\color{black}
-RESTRICTIONS, LIMITATIONS, \& CONSTRAINTS}
+\clearpage\section[RESTRICTIONS, LIMITATIONS, \& CONSTRAINTS]{\selectlanguage{english}\rmfamily\bfseries\color{black}RESTRICTIONS, LIMITATIONS, \& CONSTRAINTS}
 
 \clearpage\section[TESTING ISSUES ]{\selectlanguage{english}\rmfamily\bfseries\color{black}
 TESTING ISSUES}
 
 \subsection[Testing cases and expected results]{\selectlanguage{english}\rmfamily\bfseries\color{black}
 Testing cases and expected results}
-{\selectlanguage{english}\rmfamily\color{black}
-A discussion of screen objects andactions associatedwith thoseobjects.
-}
+
+
 \subsection[Performance Bounds]{\selectlanguage{english}\rmfamily\bfseries\color{black}
 Performance Bounds}
-{\selectlanguage{english}\rmfamily\color{black}
-A discussion of screen objects andactions associatedwith thoseobjects.
-}
+
+
 \subsection[Critical Systems]{\selectlanguage{english}\rmfamily\bfseries\color{black}
 Critical Systems}
-{\selectlanguage{english}\rmfamily\color{black}
-A discussion of screen objects andactions associatedwith thoseobjects.
-}
+
+
 \subsection[Testing Cases]{\selectlanguage{english}\rmfamily\bfseries\color{black}
 Testing Cases}
-{\selectlanguage{english}\rmfamily\color{black}
-A discussion of screen objects andactions associatedwith thoseobjects.
-}
-
-\clearpage\section[APPENDIX A. ]{\selectlanguage{english}\rmfamily\bfseries\color{black}
-APPENDIX A. \ Example Screens}
-
-\bigskip
-
-{\selectlanguage{english}\itshape\color{black}
-Include copies of specifications, mockups, prototypes, etc. supplied or
-derived from the customer. \ Appendices are labeled A, B, {\dots}n.
-\ \ Reference each appendix as appropriate in the text of the document.
-}
-
-{\selectlanguage{english}\color{black}
-\foreignlanguage{english}{\ }\foreignlanguage{english}{[ insert appendix
-A here ]}}
-
-
 
 
 \bigskip
