Fixed spacing issue in introduction
fixed spacing issue in introduction

--- a/sdd-320/main.tex
+++ b/sdd-320/main.tex
@@ -13,7 +13,7 @@
 \usepackage{hhline}
 \usepackage{hyperref}
 \usepackage{float}
-\hypersetup{pdftex, colorlinks=true, linkcolor=blue, citecolor=blue, filecolor=blue, urlcolor=blue, pdftitle=SOFTWARE DESIGN DOCUMENT (SRS), pdfauthor=Shaylyn Adams}
+\hypersetup{pdftex, colorlinks=true, linkcolor=blue, citecolor=blue, filecolor=blue, urlcolor=blue, pdftitle=SOFTWARE DESIGN DOCUMENT (SDD), pdfauthor=Shaylyn Adams}
 \usepackage[pdftex]{graphicx}
 % Outline numbering
 \setcounter{secnumdepth}{5}
@@ -283,7 +283,6 @@ The tablet app will include the following core features:
 \item Allows the user to complete a search query using the search bar
 \item Displays search results in a scrolling list form that is easy to maneuver through
 \item Displays search results in a variety of orders depending on the user's specification
-\newline\newline
 \end{itemize}
 \item Form Printing
 \begin{itemize}
